--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,8 @@
 .DS_STORE
 *.DS_STORE*
 __pycache__/
+*__pycache__/
 *__pycache__/*
+.ipynb_checkpoints
+.ipynb_checkpoints/*
+*.ipynb_checkpoints/*
